--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -2,8 +2,8 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>FastMap设施编辑系统</title>
-        <link href="../../../favicon.ico" rel="icon" type="image/x-icon" />
+        <title>FastMap一体化编辑平台</title>
+        <link href="../../../images/favicon.ico" rel="icon" type="image/x-icon" />
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/bootstrap-3.3.5/css/bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/bootstrap-3.3.5/css/bootstrap-theme.css"/>
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/ui-layout/ui-layout.css">
