--- a/apps/imeep/login.html
+++ b/apps/imeep/login.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html ng-app='loginApp'>
     <head>
-        <title>FastMap-POI室内作业系统-登录</title>
+        <title>FastMap一体化编辑平台</title>
+        <link href="../../images/favicon.ico" rel="icon" type="image/x-icon" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
