增加新登录

--- a/apps/imeep/login2.html
+++ b/apps/imeep/login2.html
@@ -17,7 +17,7 @@
         <script src="./Application.js"></script>
         <script src="./service/dataService.js"></script>
         <script src="./service/dataService-manage.js"></script>
-        <script src="./login2Ctrl.js"></script>
+        <script src="./Login2Ctrl.js"></script>
     </head>
     <body ng-controller="loginCtrl">
         <div id="navibar" class="container-fluid">
