增加新登录

--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -90,7 +90,7 @@
                                             <ul class="fm-ul fm-ul-list">
                                                 <li>
                                                     <label style="text-indent: 15px">类　　型：</label>
-                                                    <label class="text-ellipsis" ng-bind="dataStringType"></label>
+                                                    <label title="{{dataStringType}}" class="text-ellipsis" ng-bind="dataStringType"></label>
                                                 </li>
                                                 <li>
                                                     <label style="text-indent: 15px">开　　始：</label>
