工具面板整合

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -75,7 +75,7 @@
                                             <div ng-include="addZoneShapeURL" style="float: left"></div>
                                 </div>
                             </div> -->
-                            <div ng-include="mapToolbar" style="position:absolute;z-index:1;background:black;top:0px;left:290px;padding:5px;"></div>
+                            <div ng-include="mapToolbar" class="float-toolbar" style="top:0px;left:290px;"></div>
                             <div id="zoomLevelBar" class="div_float"></div>
                         </div>
                         <!--右侧属性编辑面板-->
