--- a/apps/poibase/poiEditor.html
+++ b/apps/poibase/poiEditor.html
@@ -18,135 +18,50 @@
         <script type="text/javascript" src="../../scripts/fastmap/fastmap-util.js"></script>
         <script type="text/javascript" src="../../scripts/dataApi/dataModel-poi.js"></script>
         <style>
-                .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
-                    border-radius: 0!important;
-                    border-radius: 0!important;
-                }
-                .addNode_false {
-                    background: url('../../../images/road/button/dot_add.png') no-repeat;
-                    width: 32px;
-                    height: 32px;
-                }
-                .addNode_true {
-                    background: url('../../../images/road//button/dot_add_selected.png') no-repeat;
-                    width: 32px;
-                    height: 32px;
-                }
-                .addLink_false {
-                    background: url('../../../images/road//button/line_add.png') no-repeat;
-                    width: 32px;
-                    height: 32px;
-                }
-                .addLink_true {
-                    background: url('../../../images/road//button/line_add_selected.png') no-repeat;
-                    width: 32px;
-                    height: 32px;
-                }
-                .addRelation_false {
-                    background: url('../../../images/road//button/relation_add.png') no-repeat;
-                    width: 32px;
-                    height: 32px;
-                }
-                .addRelation_true {
-                    background: url('../../../images/road//button/relation_add_selected.png') no-repeat;
-                    width: 32px;
-                    height: 32px;
-                }
-                .addRdMultidDgitized_false {
-                    background: url('../../../images/road//button/multidDgitized_add.png') no-repeat;
-                    width: 32px;
-                    height: 32px;
-                }
-                .addRdMultidDgitized_true {
-                    background: url('../../../images/road/button/multidDgitized_add_selected.png') no-repeat;
-                    width: 32px;
-                    height: 32px;
-                }
-                #fm-addShapeContainer>button:focus{
-                    outline: none;
-                }
-                /**/
-                .btn{
-                    position: relative;
-                }
-                .left{
-                    left: 0;
-                }
-                .left50{
-                    left: 70px;
-                }
-                .left100{
-                    left: 130px;
-                }
-
-                @-webkit-keyframes rotate {
-                    0%,
-                    100% {
-                        -webkit-transform: rotate(0deg);
-                    }
-                    100% {
-                        -webkit-transform: rotate(360deg);
-                    }
-                }
-                @-moz-keyframes rotate {
-                    0%,
-                    100% {
-                        -moz-transform: rotate(0deg);
-                    }
-                    100% {
-                        -moz-transform: rotate(360deg);
-                    }
-                }
-                @-o-keyframes rotate {
-                    0%,
-                    100% {
-                        -o-transform: rotate(0deg);
-                    }
-                    100% {
-                        -o-transform: rotate(360deg);
-                    }
-                }
-                @-ms-keyframes rotate {
-                    0%,
-                    100% {
-                        -ms-transform: rotate(0deg);
-                    }
-                    100% {
-                        -ms-transform: rotate(360deg);
-                    }
-                }
-                @keyframes rotate {
-                    0%,
-                    100% {
-                        transform: rotate(0deg);
-                    }
-                    100% {
-                        transform: rotate(360deg);
-                    }
-                }
-                .hourglass{//为了尽可能兼容各个浏览器
-                -moz-animation: rotate 2s linear infinite;
-                    -webkit-animation: rotate 2s linear infinite;
-                    -o-animation: rotate 2s linear infinite;
-                    -ms-animation: rotate 2s linear infinite;
-                    animation: rotate 2s linear infinite;
-                }
-
-                /**/
-                .btn-shape{
-                    color: #fff;
-                    background-color: #7F7F7F;
-                    border: 1px solid #494949;
-                }
-                .btn-shape:hover{
-                    border: 1px solid #494949;
-                }
-                .shape-well{
-                    max-width: 367px;
-                    background-color: #494949;
-                    text-align: center;
-                    opacity: .9;
-                }
+                        .float-toolbar {
+                            position:absolute;
+                            z-index:1;
+                            background:rgba(64, 64, 64, 0.8);
+                            padding:5px;
+                        }
+                        .btn-shape-cap {
+                            background-color: rgba(119, 119, 119, 0.8);
+                            color: #ccc;
+                            border: 1px solid #555;
+                        }
+                        .btn-shape {
+                            background-color: rgba(119, 119, 119, 0.8);
+                            color: #ddd;
+                            border: 1px solid #555;
+                        }
+                        .btn-shape-cap:hover, .btn-shape-cap:focus, .btn-shape:hover, .btn-shape:focus {
+                            color: #fff;
+                        }
+                        .btn-shape-cap.active {
+                            background-color: #555;
+                            color: #fff;
+                        }
+                        .btn-shape.active {
+                            background-color: #333;
+                            color: #fff;
+                        }
+                        .shape-well {
+                            background: #555;
+                            padding: 5px;
+                        }
+                        .btn-feat {
+                            border-radius: 0px !important;
+                            border: 1px solid #555;
+                            background: #777;
+                            color: #ddd;
+                        }
+                        .btn-feat:hover, .btn-feat:focus {
+                            color: #fff;
+                        }
+                        .btn-feat.active {
+                            background-color: #333;
+                            color: #fff;
+                        }
         </style>
     </head>
     <body ng-controller="PoiEditorCtl">
@@ -230,22 +145,25 @@
                                     <div ng-include="tplUrl"></div>
                                 </div>
                             </div>
-                            <div style="position:absolute;z-index:1;background:black;top:0px;left:290px;padding:5px;">
+                            <div class="float-toolbar" style="top:0px;left:290px;">
+                                <div class="btn-group" ng-init="addBtnOpened=false">
+                                    <button type="button" class="btn btn-xs" ng-class="{false:'btn-primary',true:'btn-danger'}[addBtnOpened]" ng-click="addBtnOpened=!addBtnOpened;chosenBtnOpened=false;advanceBtnOpened=false;" ng-bind="addBtnOpened?'收起《':'新增 》'"></button>
+                                </div>
                                 <div class="btn-group" ng-init="chosenBtnOpened=false">
-                                    <button type="button" class="btn btn-xs" ng-class="{false:'btn-primary',true:'btn-danger'}[chosenBtnOpened]" ng-click="chosenBtnOpened=!chosenBtnOpened;addBtnOpened=false;advanceBtnOpened=false;" ng-bind="chosenBtnOpened?'收起《':'选择 》'"></button>
+                                    <button type="button" class="btn btn-xs btn-shape-cap" ng-class="{false:'',true:'active'}[chosenBtnOpened]" ng-click="chosenBtnOpened=!chosenBtnOpened;addBtnOpened=false;advanceBtnOpened=false;" ng-bind="chosenBtnOpened?'收起《':'选择 》'"></button>
                                     <div class="btn-group" ng-if="chosenBtnOpened">
                                         <div class="btn-group">
-                                            <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">点 <span class="caret"></span></button>
-                                            <ul class="dropdown-menu shape-well" role="menu">
-                                                <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
-                                                    <button type="button" class="btn btn-shape" ng-click="selectNode('RDGSC', $event)">RDNODE</button>
-                                                    <button type="button" class="btn btn-shape" ng-click="selectNode('BRANCH_3D', $event)">RWNODE</button>
-                                                    <button type="button" class="btn btn-shape" ng-click="selectNode('RDRESTRICTION', $event)">ADNODE</button>
+                                            <button type="button" class="btn btn-xs btn-shape active dropdown-toggle" data-toggle="dropdown">点 <span class="caret"></span></button>
+                                            <ul class="dropdown-menu shape-well" style="width: 208px;">
+                                                <div class="btn-group btn-group-xs">
+                                                    <button type="button" class="btn btn-feat active" ng-click="selectNode('RDGSC', $event)">RDNODE</button>
+                                                    <button type="button" class="btn btn-feat" ng-click="selectNode('BRANCH_3D', $event)">RWNODE</button>
+                                                    <button type="button" class="btn btn-feat" ng-click="selectNode('RDRESTRICTION', $event)">ADNODE</button>
                                                 </div>
                                             </ul>
                                         </div>
                                         <div class="btn-group">
-                                            <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">线 <span class="caret"></span></button>
+                                            <button type="button" class="btn btn-xs btn-shape dropdown-toggle" data-toggle="dropdown">线 <span class="caret"></span></button>
                                             <ul class="dropdown-menu shape-well" role="menu">
                                                 <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
                                                     <button type="button" class="btn btn-shape" ng-click="selectNode('RDGSC', $event)">RDLINK</button>
@@ -255,7 +173,7 @@
                                             </ul>
                                         </div>
                                         <div class="btn-group">
-                                            <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">面 <span class="caret"></span></button>
+                                            <button type="button" class="btn btn-xs btn-shape dropdown-toggle" data-toggle="dropdown">面 <span class="caret"></span></button>
                                             <ul class="dropdown-menu shape-well" role="menu">
                                                 <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
                                                     <button type="button" class="btn btn-shape" ng-click="selectNode('RDGSC', $event)">ADFACE</button>
@@ -263,9 +181,9 @@
                                                 </div>
                                             </ul>
                                         </div>
-                                        <button type="button" class="btn btn-xs btn-default">关系</button>
-                                        <button type="button" class="btn btn-xs btn-default">Tips</button>
-                                        <button type="button" class="btn btn-xs btn-default">点要素</button>
+                                        <button type="button" class="btn btn-xs btn-shape">关系</button>
+                                        <button type="button" class="btn btn-xs btn-shape">Tips</button>
+                                        <button type="button" class="btn btn-xs btn-shape">点要素</button>
                                     </div>
                                 </div>
                                 <div class="btn-group" ng-init="addBtnOpened=false">
