--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -36,11 +36,11 @@
                 <div ui-layout="{flow:'row',dividerSize:'0',disableToggle:true}">
                     <div ui-layout-container size="35px" style="background-color: #222;padding:5px 10px;">
                         <div class="btn-group fm-btn-group" role="group">
-                            <button class="btn btn-xs btn-gray" ng-class="{1: 'active'}[dataListType]" ng-click="changeDataList(1)"><i class="fa fa-sun-o" aria-hidden="true"></i> 一体化任务</button>
-                            <button class="btn btn-xs btn-gray" ng-class="{2: 'active'}[dataListType]" ng-click="changeDataList(2)"><i class="fa fa-sun-o" aria-hidden="true"></i> POI任务</button>
-                            <button class="btn btn-xs btn-gray" ng-class="{3: 'active'}[dataListType]" ng-click="changeDataList(3)"><i class="fa fa-moon-o" aria-hidden="true"></i> 道路任务</button>
-                            <button class="btn btn-xs btn-gray" ng-class="{4: 'active'}[dataListType]" ng-click="changeDataList(4)"><i class="fa fa-moon-o" aria-hidden="true"></i> POI任务</button>
-                            <button class="btn btn-xs btn-gray" ng-class="{5: 'active'}[dataListType]" ng-click="changeDataList(5)"><i class="fa fa-adjust" aria-hidden="true"></i> 专项作业任务</button>
+                            <button class="btn btn-xs btn-purple" ng-class="{1: 'active'}[dataListType]" ng-click="changeDataList(1)"><i class="fa fa-sun-o" aria-hidden="true"></i> 一体化任务</button>
+                            <button class="btn btn-xs btn-purple" ng-class="{2: 'active'}[dataListType]" ng-click="changeDataList(2)"><i class="fa fa-sun-o" aria-hidden="true"></i> POI任务</button>
+                            <button class="btn btn-xs btn-purple" ng-class="{3: 'active'}[dataListType]" ng-click="changeDataList(3)"><i class="fa fa-moon-o" aria-hidden="true"></i> 道路任务</button>
+                            <button class="btn btn-xs btn-purple" ng-class="{4: 'active'}[dataListType]" ng-click="changeDataList(4)"><i class="fa fa-moon-o" aria-hidden="true"></i> POI任务</button>
+                            <button class="btn btn-xs btn-purple" ng-class="{5: 'active'}[dataListType]" ng-click="changeDataList(5)"><i class="fa fa-adjust" aria-hidden="true"></i> 专项作业任务</button>
                         </div>
                     </div>
                     <div ui-layout-container>
@@ -50,9 +50,9 @@
                                     <div ui-layout-container size="36px" style="padding: 5px 5px;overflow:visible">
                                         <div class="btn-group fm-btn-group" role="group">
                                             <div class="btn-group-vertical">
-                                                <button class="btn btn-xs btn-gray" ng-class="{6: 'active'}[taskStatus]" ng-click="changeTaskStatus(6)" style="padding: 20px 5px;"><i class="fa fa-th-large" aria-hidden="true"></i><br>全<br>部</button>
-                                                <button class="btn btn-xs btn-gray" ng-class="{7: 'active'}[taskStatus]" ng-click="changeTaskStatus(7)" style="padding: 20px 5px;"><i class="fa fa-unlock" aria-hidden="true"></i><br>开<br>启</button>
-                                                <button class="btn btn-xs btn-gray" ng-class="{8: 'active'}[taskStatus]" ng-click="changeTaskStatus(8)" style="padding: 20px 5px;"><i class="fa fa-lock" aria-hidden="true"></i><br>关<br>闭</button>
+                                                <button class="btn btn-xs btn-purple" ng-class="{6: 'active'}[taskStatus]" ng-click="changeTaskStatus(6)" style="padding: 20px 5px;"><i class="fa fa-th-large" aria-hidden="true"></i><br>全<br>部</button>
+                                                <button class="btn btn-xs btn-purple" ng-class="{7: 'active'}[taskStatus]" ng-click="changeTaskStatus(7)" style="padding: 20px 5px;"><i class="fa fa-unlock" aria-hidden="true"></i><br>开<br>启</button>
+                                                <button class="btn btn-xs btn-purple" ng-class="{8: 'active'}[taskStatus]" ng-click="changeTaskStatus(8)" style="padding: 20px 5px;"><i class="fa fa-lock" aria-hidden="true"></i><br>关<br>闭</button>
                                             </div>
                                         </div>
                                     </div>
