改善editor页面左边滚动条

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/timepicki/css/timepicki.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/bootstrap-datepicker/css/datepicker3.css">
         <script src="../../../scripts/libs/leaflet-0.7.3/leaflet-src.js"></script>
+        <!--<script src="../../../scripts/libs/leaflet-0.7.3/plugins/wellkown.js"></script>-->
         <script type="text/javascript" src="../Application.js"></script>
         <script type="text/javascript" src="../../../scripts/fastmap/fastmap.js"></script>
         <script type="text/javascript" src="../../../scripts/fastmap/fastmap-util.js"></script>
