--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -26,19 +26,19 @@
                 <div class="banner-top"><a><strong>FM</strong></a></div>
                 <div class="banner-center">
                     <div tooltip-class="subTooltip" uib-tooltip="日 一体化任务" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{1: 'selected'}[dataListType]" ng-click="changeDataList(1)">
-                        <a><i class="fa fa-map-o fa-lg" aria-hidden="true"></i></i></a>
+                        <a><i class="fa fa-map-o" aria-hidden="true"></i></i></a>
                     </div>
                     <div tooltip-class="subTooltip" uib-tooltip="日 POI任务" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{2: 'selected'}[dataListType]" ng-click="changeDataList(2)">
-                        <a><i class="fa fa-map-pin fa-lg" aria-hidden="true"></i></a>
+                        <a><i class="fa fa-map-pin" aria-hidden="true"></i></a>
                     </div>
                     <div tooltip-class="subTooltip" uib-tooltip="月 道路任务" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{3: 'selected'}[dataListType]" ng-click="changeDataList(3)">
-                        <a><i class="fa fa-road fa-lg" aria-hidden="true"></i></a>
+                        <a><i class="fa fa-road" aria-hidden="true"></i></a>
                     </div>
                     <div tooltip-class="subTooltip" uib-tooltip="月 POI任务" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{4: 'selected'}[dataListType]" ng-click="changeDataList(4)">
-                        <a><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
+                        <a><i class="fa fa-map-marker" aria-hidden="true"></i></a>
                     </div>
                     <div tooltip-class="subTooltip" uib-tooltip="专项任务" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{5: 'selected'}[dataListType]" ng-click="changeDataList(5)">
-                        <a><i class="fa fa-pencil-square fa-lg" aria-hidden="true"></i></i></a>
+                        <a><i class="fa fa-pencil-square" aria-hidden="true"></i></i></a>
                     </div>
                 </div>
                 <div class="banner-bottom">
@@ -64,7 +64,6 @@
                                     <div class="content" style="min-height: 217px;padding: 5px 0;">
                                         <ul ng-if="currentSubTaskList&&!currentSubTaskList.length" class="fm-ul fm-ul-list">
                                             <li>暂时没有子任务数据</li>
-                                            <!--<a tabindex="0" uib-tooltip="Test" class="btn btn-default"></a>-->
                                         </ul>
                                         <ul class="fm-ul fm-ul-list">
                                             <li ng-repeat="item in currentSubTaskList">
@@ -74,10 +73,9 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <!-- -->
                             </div>
 
-                        <div ui-layout-container>
+                        <div ui-layout-container class="fm-no-scroll">
                             <div id="map" style="background-color:#FFF;width: 100%;height: 100%;position: absolute;"></div>
                             <div class="fm-foldable fm-col fm-no-scroll" style="width: 315px;" ng-style="{'right':{true: '0px', false: '-300px', 'none': '-315px'}[infoPanelOpened]}">
                                 <div class="fm-fold-btn">
