改善分页样式

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -27,6 +27,7 @@
         <script src="loadMapApi.js"></script>
         <script src="loadUikit.js"></script>
         <script src="loadCanvasFeature.js"></script>
+        <script src="http://cdn-geoweb.s3.amazonaws.com/terraformer/1.0.4/terraformer.min.js"></script>
     </head>
     <body ng-controller="EditorCtl">
         <div ui-layout="{flow:'column',dividerSize:'0'}" ui-layout-loaded>
