--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -35,10 +35,10 @@
                 <div class="banner-top"><a><strong>FM</strong></a></div>
                 <div class="banner-center">
                     <div ng-class="{1:'selected'}[selectedTool]" ng-click="changeEditTool('tipsPanel')">
-                        <a><i title="成果" class="glyphicon glyphicon-home"></i></a>
+                        <a tooltip-class="subTooltip" uib-tooltip="成　果" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true><i title="成果" class="glyphicon glyphicon-home"></i></a>
                     </div>
                     <div ng-class="{2:'selected'}[selectedTool]" ng-click="changeEditTool('scenePanel')">
-                        <a><i title="场景" class="glyphicon glyphicon-facetime-video"></i></a>
+                        <a tooltip-class="subTooltip" uib-tooltip="场　景" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true><i title="场景" class="glyphicon glyphicon-facetime-video"></i></a>
                     </div>
                 </div>
                 <div class="banner-bottom">
