--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -63,11 +63,14 @@
                                         <span style="float:right;">共 <span ng-bind="currentSubTaskList.length"></span> 条</span>
                                     </div>
                                     <div class="content" style="min-height: 217px;padding: 5px 0;">
+                                        <ul class="fm-ul fm-ul-list" ng-if="!dataLoaded">
+                                            <li><i class="fa fa-refresh fa-spin fa-fw"></i> Loading ...</li>
+                                        </ul>
                                         <ul ng-if="currentSubTaskList&&!currentSubTaskList.length" class="fm-ul fm-ul-list">
                                             <li>暂时没有子任务数据</li>
                                         </ul>
                                         <ul class="fm-ul fm-ul-list">
-                                            <li ng-repeat="item in currentSubTaskList">
+                                            <li ng-if="dataLoaded" ng-repeat="item in currentSubTaskList">
                                                 <a href='javascript:void(0);' class="col-lg-11 text-ellipsis" ng-click="selectSubtask(item)" ng-bind="($index + 1) + ' . ' + item.name"></a>　
                                                 <i ng-if="currentTaskData.subtaskId===item.subtaskId" class="fa fa-check col-lg-1" aria-hidden="true"></i>
                                             </li>
