--- a/apps/imeep/login2.html
+++ b/apps/imeep/login2.html
@@ -29,8 +29,8 @@
         <div class="wrapper container">
             <div class="col-sm-6 left_part">
                 <div class="container login">
-                    <div class="company-logo"></div>
-                    <login valid-type="2"></login>
+                    <!--<div class="company-logo"></div>-->
+                    <login valid-type="1"></login>
                 </div>
             </div>
         </div>
