--- a/apps/imeep/login.html
+++ b/apps/imeep/login.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html ng-app='loginApp'>
+<html ng-app='loginApp' style="height: 100%">
     <head>
-        <title>FastMap一体化编辑平台</title>
-        <link href="../../images/favicon.ico" rel="icon" type="image/x-icon" />
+        <title>FastMap-POI室内作业系统-登录</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -10,7 +9,7 @@
         <link href="../../scripts/libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="../../scripts/libs/bootstrap-3.3.5/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
         <link href="../../scripts/libs/sweet-alert/css/sweet-alert.css" rel="stylesheet" type="text/css"/>
-        <link href="../../styles/imeep/login.css" rel="stylesheet" type="text/css" />
+        <link href="../../styles/imeep/login2.css" rel="stylesheet" type="text/css" />
         <script src="../../scripts/libs/sweet-alert/js/sweet-alert.js"></script>
         <script src="../../scripts/libs/angularjs/1.4.4/angular.min.js"></script>
         <script src="../../scripts/libs/angularjs/1.4.4/angular-cookies.min.js"></script>
@@ -18,21 +17,26 @@
         <script src="./Application.js"></script>
         <script src="./service/dataService.js"></script>
         <script src="./service/dataService-manage.js"></script>
-        <script src="./loginCtrl.js"></script>
+        <script src="LoginCtrl.js"></script>
     </head>
     <body ng-controller="loginCtrl">
         <div id="navibar" class="container-fluid">
             <div class="navbar-header">
-                <h1>FastMap | <small>室内作业系统</small></h1>
+                <h1>FastMap | 一体化编辑平台</h1>
             </div>
         </div>
         <!-- main login part -->
-        <div style="top: 0;bottom: 0;left: 0;right: 0;margin: auto;height: 300px;" class="login">
-            <div class="company-logo"></div>
-            <login valid-type="2"></login>
+        <div class="wrapper container">
+            <div class="col-sm-6 left_part">
+                <div class="container login">
+                    <div class="company-logo"></div>
+                    <login valid-type="2"></login>
+                </div>
+            </div>
         </div>
-        <footer class="bs-docs-footer">
-            <small>Copyright©2014 北京四维图新科技股份有限公司</small>
+
+        <footer class="bs-docs-footer" style="">
+            <small>Copyright©2014　　　　北京四维图新科技股份有限公司</small>
         </footer>
     </body>
 </html>
