--- a/apps/imeep/login-new.html
+++ b/apps/imeep/login-new.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app='loginApp'>
     <head>
-        <title>FastMap-POI室内作业系统-登录</title>
+        <title>FastMap-一体化编辑平台-登录</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -25,7 +25,7 @@
                 <!-- 登录页logo -->
                 <div class="row">
                     <div class="col-xs-8 col-sm-8 col-md-6 col-xs-offset-2 col-sm-offset-2 col-md-offset-3 text">
-                        <h1><strong>FastMap</strong> | 室内作业系统</h1>
+                        <h1><strong>FastMap</strong> | 一体化编辑平台</h1>
                     </div>
                 </div>
                 <!-- form 表单部分 -->
