--- a/apps/imeep/login.html
+++ b/apps/imeep/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app='loginApp' style="height: 100%">
     <head>
-        <title>FastMap-POI室内作业系统-登录</title>
+        <title>FastMap-一体化编辑平台-登录</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
