--- a/apps/imeep/login-new.html
+++ b/apps/imeep/login-new.html
@@ -16,7 +16,7 @@
         <script src="../../scripts/libs/backstretch/ng-backstretch.min.js"></script>
         <script src="../../scripts/components/directives/fastmap-uikit-all.js"></script>
         <script src="./Application.js"></script>
-        <script src="./newLoginCtrl.js"></script>
+        <script src="./loginCtrl-new.js"></script>
 
     </head>
     <body ng-controller="loginPageCtrl">
