--- a/apps/imeep/login.html
+++ b/apps/imeep/login.html
@@ -17,7 +17,7 @@
         <script src="./Application.js"></script>
         <script src="./service/dataService.js"></script>
         <script src="./service/dataService-manage.js"></script>
-        <script src="./LoginCtrl.js"></script>
+        <script src="./loginCtrl.js"></script>
     </head>
     <body ng-controller="loginCtrl">
         <div id="navibar" class="container-fluid">
