--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -19,7 +19,7 @@
         <script type="text/javascript" src="../../../scripts/fastmap/fastmap-util.js"></script>
         <script src="../editor/loadMapApi.js"></script>
         <script src="../editor/loadUikit.js"></script>
-        <script src="../editor/loadCanvasFeature.js"></script>
+        <script src="../../../scripts/dataApi/dataApi-canvasFeature.js"></script>
     </head>
     <body ng-controller="TaskSelectionCtl">
         <div ui-layout="{flow:'column',dividerSize:'0'}" ui-layout-loaded>
