--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -23,10 +23,10 @@
         <script type="text/javascript" src="../../../scripts/fastmap/fastmap-util.js"></script>
         <script type="text/javascript" src="../../../scripts/dataApi/dataApi-poi.js"></script>
         <script type="text/javascript" src="../../../scripts/dataApi/dataApi-road.js"></script>
+        <script type="text/javascript" src="../../../scripts/dataApi/dataApi-canvasFeature.js"></script>
         <script type="text/javascript" src="../../../scripts/utils/Utils.js"></script>
         <script src="loadMapApi.js"></script>
         <script src="loadUikit.js"></script>
-        <script src="loadCanvasFeature.js"></script>
         <script src="http://cdn-geoweb.s3.amazonaws.com/terraformer/1.0.4/terraformer.min.js"></script>
     </head>
     <body ng-controller="EditorCtl">
