--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -61,7 +61,9 @@
                         </div>
                     </div>
                     <div ui-layout-container class="fm-no-scroll">
-                        <div id="map" style="background-color:#F0F4F8;width: 100%;height: 100%;">
+                        <div ui-layout="{flow:'row',dividerSize:'0'}">
+                            <div ui-layout-container id="map" style="background-color:#F0F4F8;width: 100%;height: 100%;">
+                            </div>
                             <!-- <div id="toolsDiv" style="left:5px;top:5px;height: 40px;position: absolute;z-index:1;background-color: transparent">
                                     <div class="btn-toolbar" style="margin-left: 0px">
                                         <div ng-include="selectShapeURL" style="float: left"></div>
