--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -82,7 +82,7 @@
                                 <button type="button" class="btn btn-xs btn-shape" ng-class="{'batch':'active'}[advancedTool]" ng-click="openAdvancedToolsPanel('batch')">批处理 <img ng-src="{{appPath.root}}images/poi/icon/loading-cycle.gif" ng-if="batchRunning"></button>
                             </div>
                             <div ng-include="mapToolbar" class="div-float map-toolbar" style="top:0px;left:290px;"></div>
-                            <div ng-include="specialOperationToolbar" class="div-float map-toolbar" style="top:0px;left:580px;"></div>
+                            <!-- <div ng-include="specialOperationToolbar" class="div-float map-toolbar" style="top:0px;left:580px;"></div> -->
                             <div id="zoomLevelBar" class="div-float" style="bottom:5px;left:5px;width:100px;"></div>
                             <div ng-show="advancedTool!=null" class="div-float" style="top:80px;left:290px;min-width:300px;max-width:400px;border-radius:5px;">
                                 <button type="button" class="close" style="padding:0px 4px;" ng-click="closeAdvancedToolsPanel()"><span>&times;</span></button>
@@ -136,6 +136,12 @@
                             </div>
                             <div class="fm-container fm-row" style="height:240px;">
                                 <div ng-include="consoleDeskTpl"></div>
+                            </div>
+                        </div>
+                        <!--上方输出信息面板-->
+                        <div class="fm-foldable fm-row" style="height:100%;left:2px;width:auto;" ng-style="{'top':{true: '29px', false: '-800px'}[workPanelOpened], right: {true: '302px', false: '2px', 'none': '2px'}[editorPanelOpened]}">
+                            <div class="fm-container fm-row" style="height:100%;">
+                                <div ng-include="specialWorkPanelTpl"></div>
                             </div>
                         </div>
                         <div ng-class="{true:'popoverTips animated-fast fadeInLeft',false:'popoverTips animated-fast fadeOutLeft'}[tipsPanelOpened]">
