--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -166,7 +166,7 @@
         <div id="dataTipsVideoModal" style="display:none">
             <div ng-include="tipsVideoContainer" style="height: 100%;width: 100%"></div>
         </div>
-        <div id="fullScalePic" ng-show="roadFullScreen" ng-click="hideFullPic();"><img src=""></div>
+        <!-- <div id="fullScalePic" ng-show="roadFullScreen" ng-click="hideFullPic();"><img src=""></div> -->
         <!-- logMsg提示 -->
         <div class="log-message-container">
           <div class="log-message animated-fast fadeInLeft" ng-repeat="msg in logMessage">
@@ -176,7 +176,7 @@
             </div>
           </div>
         </div>
-        <!-- <div style="position:absolute;left:0;bottom:0;width:40px;height:40px;background-color:red;" ng-click="addLogMsg();"></div> -->
+        <div style="position:absolute;left:0;bottom:0;width:40px;height:40px;background-color:red;" ng-click="addLogMsg();"></div>
         <!-- 统一关系 -->
         <div ng-include="sameRelationShapTplContainer"></div>
 
