注释调试代码

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -176,7 +176,7 @@
             </div>
           </div>
         </div>
-        <div style="position:absolute;left:0;bottom:0;width:40px;height:40px;background-color:red;" ng-click="addLogMsg();"></div>
+        <!-- <div style="position:absolute;left:0;bottom:0;width:40px;height:40px;background-color:red;" ng-click="addLogMsg();"></div> -->
         <!-- 统一关系 -->
         <div ng-include="sameRelationShapTplContainer"></div>
 
